# entab_client

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  login.rs  main.rs
tui/: Cargo.toml  README.md  demo.tape  demo2.tape  nohup.out
tui/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  logging.rs  main.rs
tui/src/components/: details.rs  download_popup.rs  home.rs  list.rs
