[package]
name = "client_core"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.37", features = ["derive"] }
comfy-table = "7.1.4"
crossterm = "0.29.0"
hex = "0.4.3"
inquire = "0.7.5"
lazy_static = "1.5.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha-1 = "0.10.1"
tl = "0.7.8"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
